added user manual for joinTracks

--- a/README
+++ b/README
@@ -7,3 +7,4 @@ https://github.com/willieneis/TIAM/
   classifier
 
 data/ directory needed to run everything.
+There are screenshots in the directories.
