added vivek's datagit status

--- a/classifyTracks/doc/012413.tex
+++ b/classifyTracks/doc/012413.tex
@@ -44,7 +44,7 @@
   \frametitle{GUI}  
   
     \begin{figure}[H]\centering
-    \includegraphics[width=.9\textwidth]{sc1.png}
+    \includegraphics[width=.9\textwidth]{fig/sc1.png}
   \end{figure}
   
 \end{frame}
@@ -53,7 +53,7 @@
   \frametitle{GUI}  
   
     \begin{figure}[H]\centering
-    \includegraphics[width=.9\textwidth]{sc2.png}
+    \includegraphics[width=.9\textwidth]{fig/sc2.png}
   \end{figure}
   
 \end{frame}
