--- a/classifyTracks/doc/052413/052413.tex
+++ b/classifyTracks/doc/052413/052413.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \title{TIAM+}
 \subtitle{extending the Tool for Integrative Analysis of Motility\\ https://github.com/r-medina/TIAM-}
-\author{Ricardo Medina}
+\author{Ricardo Medina \\ \small{ \and Sakellarios Zairis \and Jan-Willem van de Meent}}
 \date{\today}
 
 \frame{\titlepage}
